external-projects/sui-prover/crates/sui-prover/tests/snapshots/pure_functions/pure_conditional_smt.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 287
expression: output
---
exiting with verification errors
error: function code should not abort
   ┌─ tests/inputs/pure_functions/pure_conditional_smt.fail.move:16:11
   │
16 │         x - 10  // BUG: should be x - 1
   │           ^
   │
   =     at tests/inputs/pure_functions/pure_conditional_smt.fail.move:14: decrement_or_zero
